fixed an issue where the whitespace below the table was scaling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,10 @@
     border: 1px solid #ddd;    /* Add borders for clarity */
   }
 
+  .table-wrapper {
+    margin-bottom: 1rem;
+}
+
 button, input[type="submit"] {
     font-weight: normal;
 }
